<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleMainTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_main"
        android:layout_margin="@dimen/main_margin"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></org.osmdroid.views.MapView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="false"
            android:layout_centerVertical="true"
            app:srcCompat="@mipmap/ic_marker" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:layout_marginBottom="@dimen/half_margin"
        android:layout_marginTop="@dimen/half_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/currentLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_location" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="invisible" />

        </RelativeLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_margin"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:autoLink="web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="bottom|center"
            android:text="@string/attribution" />

        <TextView
            android:id="@+id/textView7"
            android:autoLink="web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="bottom|center"
            android:text="@string/map_attribution" />

    </LinearLayout>

</LinearLayout>