<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/background"
    android:gravity="center_horizontal|center_vertical"
    android:padding="@dimen/widget_padding"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2">


        <TextView
            android:id="@+id/sunriseNameTextView"
            android:paddingRight="@dimen/description_padding"
            android:textSize="@dimen/widget_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunrise" />

        <TextView
            android:id="@+id/sunriseTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/widget_text"
            android:text="@string/not_available" />

        <TextView
            android:id="@+id/sunsetNameTextView"
            android:paddingRight="@dimen/description_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/widget_text"
            android:text="@string/sunset" />

        <TextView
            android:id="@+id/sunsetTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/widget_text"
            android:text="@string/not_available" />

    </GridLayout>

</LinearLayout>